hoàn thành model

--- a/api2/src/main/resources/application.properties
+++ b/api2/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.application.name=api2
 
 # MYSQL
+operation.start = 2024
 operation.year = 2024
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
