hoàn thành 60% jwt token với webflux

--- a/api2/src/main/resources/application.properties
+++ b/api2/src/main/resources/application.properties
@@ -7,3 +7,16 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.main.allow-circular-references=true
 
+# SECURITY
+spring.security.user.name=root
+spring.security.user.password=petrosmart@2024!
+
+# SERECT WEBFLUT
+springbootwebfluxjjwt.password.encoder.secret=16115151816126120111243051126141161016101112815
+springbootwebfluxjjwt.password.encoder.iteration=33
+springbootwebfluxjjwt.password.encoder.keylength=256
+springbootwebfluxjjwt.password.encoder.algorithm=PBKDF2WithHmacSHA512
+
+# JWT
+springbootwebfluxjjwt.jjwt.secret=16115151816126120111243051126141161016101112815
+springbootwebfluxjjwt.jjwt.expiration=28800
